--- a/signuplogin.html
+++ b/signuplogin.html
@@ -56,7 +56,7 @@
           <label class="form-remember">
             <input type="checkbox" value="remember-me"> Remember me
           </label>
-          <a href="/login.html" style="float:right">Login</a>
+          <a href="/index.html" style="float:right">Login</a>
         </div>
         <button class="btn-wisteria" type="submit">Sign Up</button>
       </form>
