The revolution has begun

--- a/thanks.html
+++ b/thanks.html
@@ -35,7 +35,15 @@
 <body>
     <h1>Thanks for Registering.</h1>
     <br>
-    <h3>Imagine a world Soon you and yours will be able to order burritos without the hassle of using WhatsApp.</h3>
+    <h3>Imagine a world without rules, controls, borders, or boundaries. 
+        A world where you and yours will be able to get together on a Friday morning...to order Burritos. 
+        Your order will not be through a WhatsApp group, no, it will be through an App that runs on your favorite mobile operating system (no Windows Phone support, sorry).
+        This world you are imagining is becoming a reality, a reality so real you will be able to smell it, taste it...
+    </h3>
+    <br>
+    <br>
+    <br>
+    <p>You'll receive an email when we launch our public beta. Thanks! :)</p>
 </body>
 
 </html>
